# opus-codec

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
scripts/: verify_system_lib.py
src/: bindings.rs  constants.rs  decoder.rs  dred.rs  encoder.rs  lib.rs  multistream.rs  packet.rs  projection.rs  repacketizer.rs  types.rs
tests/: ffmpeg_roundtrip.rs  opus_tests.rs
